savw new changes made to the website

--- a/home.html
+++ b/home.html
@@ -43,8 +43,10 @@
       <!-- Links -->
       <nav class="hidden md:flex space-x-6 font-medium">
         <a href="home.html" class="hover:text-[#85CCFF]">Home</a>
+        <a href="login.html" class="hover:text-[#85CCFF]">Login</a>
         <a href="madrasahabout.html" class="hover:text-[#85CCFF]">About</a>
         <a href="curriculum.html" class="hover:text-[#85CCFF]">Curriculum</a>
+        <a href="faq.html" class="hover:text-[#85CCFF]">FAQ</a>
         <a href="registeration.html" class="hover:text-[#85CCFF]">Register</a>
         <a href="blog.html" class="hover:text-[#85CCFF]">Blog</a>
         <a href="#contact" class="hover:text-[#85CCFF]">Contact</a>
