--- a/payment-portal.html
+++ b/payment-portal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Himaayah — Payment Portal</title>
+  <title>HIAIS Payment Portal</title>
 
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -32,7 +32,7 @@
       <div class="flex items-center gap-4">
         <div class="w-12 h-12 rounded-md flex items-center justify-center" style="background:var(--regal);color:var(--white);font-weight:700">H</div>
         <div>
-          <h1 class="text-xl font-bold accent">Himaayah Payment Portal</h1>
+          <h1 class="text-xl font-bold accent">HIAIS Payment Portal</h1>
           <p class="text-sm text-gray-600">Secure payments — Admission, Term, & Exam fees</p>
         </div>
       </div>
