--- a/registration.html
+++ b/registration.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Himaayah Madrasah | Home</title>
+  <title>Himaayah Institute of Arabic and Islamic Studies | Registration</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     html {
@@ -38,13 +38,14 @@
       <!-- Logo -->
       <div class="flex items-center space-x-3">
         <img src="logo.png" alt="Himaayah Logo" class="h-12 w-auto">
-        <span class="text-xl font-bold tracking-wide">Himaayah Madrasah</span>
+        <span class="text-xl font-bold tracking-wide">Himaayah Institute of Arabic and Islamic Studies</span>
       </div>
       <!-- Links -->
       <nav class="hidden md:flex space-x-6 font-medium">
         <a href="home.html" class="hover:text-[#85CCFF]">Home</a>
         <a href="madrasahabout.html" class="hover:text-[#85CCFF]">About</a>
         <a href="curriculum.html" class="hover:text-[#85CCFF]">Curriculum</a>
+        <a href="login.html" class="hover:text-[#85CCFF]">Login</a>
         <a href="registeration.html" class="hover:text-[#85CCFF]">Register</a>
         <a href="blog.html" class="hover:text-[#85CCFF]">Blog</a>
         <a href="#contact" class="hover:text-[#85CCFF]">Contact</a>
@@ -59,7 +60,7 @@
     <div class="absolute bottom-10 right-10 w-16 h-16 bg-white rounded-full opacity-10 float"></div>
     <div class="max-w-4xl mx-auto px-6 fade-in">
       <h1 class="text-4xl md:text-5xl font-bold leading-tight mb-4">Welcome to 
-        <span class="text-[#85CCFF]">Himaayah Institute</span></h1>
+        <span class="text-[#85CCFF]">Himaayah Institute of Arabic and Islamic Studies</span></h1>
       <p class="text-lg text-gray-200 mb-8">A place where knowledge refines the soul, Arabic becomes your language of light, and faith guides your every step.</p>
       <div class="space-x-4">
         <a href="registeration.html" class="bg-[#85CCFF] text-[#094570] font-semibold px-6 py-3 rounded-full hover:bg-white transition">Join the Madrasah</a>
@@ -129,7 +130,7 @@
   <footer id="contact" class="bg-[#094570] text-white py-12 fade-in">
     <div class="container mx-auto px-6 grid md:grid-cols-3 gap-8">
       <div>
-        <h3 class="text-xl font-semibold mb-4">Himaayah Institute</h3>
+        <h3 class="text-xl font-semibold mb-4">Himaayah Institute of Arabic and Islamic Studies</h3>
         <p class="text-gray-300">A global digital madrasah dedicated to spreading authentic Islamic knowledge and nurturing balanced scholars of tomorrow.</p>
       </div>
       <div>
@@ -149,7 +150,7 @@
       </div>
     </div>
     <div class="text-center text-gray-400 mt-10 border-t border-gray-700 pt-6">
-      © 2025 Himaayah Institute of Arabic & Islamic Studies. All rights reserved.
+      © 2026 Himaayah Institute of Arabic & Islamic Studies. All rights reserved.
     </div>
   </footer>
 
