upadate all pages Fix mobile layout + nav links

--- a/about.html
+++ b/about.html
@@ -26,14 +26,15 @@
     <div class="container mx-auto flex justify-between items-center py-4 px-6">
       <div class="flex items-center space-x-3">
         <img src="logo.png" alt="Himaayah Logo" class="h-12 w-auto">
-        <span class="text-xl font-bold">Himaayah Madrasah</span>
+        <span class="text-xl font-bold">Himaayah Institute of Arabic and Islamic Studies</span>
       </div>
       <nav class="hidden md:flex space-x-6 font-medium">
-        <a href="home.html" class="hover:text-[#85CCFF]">Home</a>
+        <a href="index.html" class="hover:text-[#85CCFF]">Home</a>
+        <a href="login.html" class="hover:text-[#85CCFF]">Login</a>
         <a href="madrasahabout.html" class="hover:text-[#85CCFF]">About</a>
-        <a href="registeration.html" class="hover:text-[#85CCFF]">Registration</a>
+        <a href="blogpost.html" class="hover:text-[#85CCFF]">Blog</a>
         <a href="curriculum.html" class="hover:text-[#85CCFF]">Curriculum</a>
-        <a href="#contact" class="hover:text-[#85CCFF]">Contact</a>
+        <a href="contact.html" class="hover:text-[#85CCFF]">Contact</a>
       </nav>
     </div>
   </header>
@@ -56,7 +57,7 @@
   <!-- Main Content -->
   <section class="py-16 px-6 max-w-5xl mx-auto space-y-12 fade-in">
 
-    <!-- The Himaayah Program -->
+    <!-- The HIAIS Program -->
     <div>
       <h2 class="text-3xl font-bold text-[#094570] mb-4">The HIAIS Program</h2>
       <p class="leading-relaxed text-gray-700 mb-6">
@@ -85,7 +86,7 @@
       </p>
     </div>
 
-    <!-- Message from Himaayah -->
+    <!-- Message from HIAIS -->
     <div>
       <h2 class="text-3xl font-bold text-[#094570] mb-4">Message from Us</h2>
       <p class="text-gray-700 leading-relaxed mb-6">
@@ -98,7 +99,7 @@
 
     <!-- Objectives -->
     <div>
-      <h2 class="text-3xl font-bold text-[#094570] mb-6">Objectives of Himaayah Institute</h2>
+      <h2 class="text-3xl font-bold text-[#094570] mb-6">Objectives of HIAIS</h2>
       <ul class="list-disc list-inside space-y-3 text-gray-700 leading-relaxed">
         <li>To disseminate balanced Islamic knowledge to the widest possible audience.</li>
         <li>To meet the needs of beginner and advanced students through a structured, progressive curriculum.</li>
@@ -111,7 +112,7 @@
 
   <!-- Footer -->
   <footer class="bg-[#094570] text-white py-10 text-center" id="contact">
-    <p class="text-sm opacity-90">© 2025 Himaayah Institute of Arabic & Islamic Studies. All rights reserved.</p>
+    <p class="text-sm opacity-90">© 2026 Himaayah Institute of Arabic & Islamic Studies. All rights reserved.</p>
   </footer>
 
 </body>
