--- a/curriculum.html
+++ b/curriculum.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Curriculum | Himaayah Madrasah</title>
+  <title>Curriculum | Himaayah Institute of Arabic and Islamic Studies</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     :root {
@@ -174,7 +174,7 @@
   <section class="bg-[var(--pastel)] py-12 text-center text-[var(--regal)]">
     <h2 class="text-2xl font-bold">Ready to Begin?</h2>
     <p class="mt-2 text-gray-700">Join hundreds of students learning Qur’an, Arabic, and Islam online.</p>
-    <a href="registration.html" class="inline-block mt-6 bg-[var(--regal)] text-white px-8 py-3 rounded-lg hover:bg-[#0A3552] transition">Register Now</a>
+    <a href="payment-portal.html" class="inline-block mt-6 bg-[var(--regal)] text-white px-8 py-3 rounded-lg hover:bg-[#0A3552] transition">Register Now</a>
   </section>
 
   <!-- Footer -->
