--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
       </div>
       <!-- Links -->
       <nav class="hidden md:flex space-x-6 font-medium">
-        <a href="home.html" class="hover:text-[#85CCFF]">Home</a>
-        <a href="madrasahabout.html" class="hover:text-[#85CCFF]">About</a>
+        <a href="index.html" class="hover:text-[#85CCFF]">Home</a>
+        <a href="about.html" class="hover:text-[#85CCFF]">About</a>
         <a href="curriculum.html" class="hover:text-[#85CCFF]">Curriculum</a>
         <a href="login.html" class="hover:text-[#85CCFF]">Login</a>
-        <a href="registeration.html" class="hover:text-[#85CCFF]">Register</a>
+        <a href="payment-portal.html" class="hover:text-[#85CCFF]">Register</a>
         <a href="blog.html" class="hover:text-[#85CCFF]">Blog</a>
-        <a href="#contact" class="hover:text-[#85CCFF]">Contact</a>
+        <a href="contact.html" class="hover:text-[#85CCFF]">Contact</a>
       </nav>
     </div>
   </header>
@@ -63,7 +63,7 @@
         <span class="text-[#85CCFF]">Himaayah Institute of Arabic and Islamic Studies</span></h1>
       <p class="text-lg text-gray-200 mb-8">A place where knowledge refines the soul, Arabic becomes your language of light, and faith guides your every step.</p>
       <div class="space-x-4">
-        <a href="registeration.html" class="bg-[#85CCFF] text-[#094570] font-semibold px-6 py-3 rounded-full hover:bg-white transition">Join the Madrasah</a>
+        <a href="payment-portal.html" class="bg-[#85CCFF] text-[#094570] font-semibold px-6 py-3 rounded-full hover:bg-white transition">Join the Madrasah</a>
         <a href="curriculum.html" class="border border-[#85CCFF] text-[#85CCFF] px-6 py-3 rounded-full hover:bg-[#85CCFF] hover:text-[#094570] transition">View Curriculum</a>
       </div>
     </div>
@@ -77,7 +77,7 @@
         Himaayah Institute of Arabic & Islamic Studies is dedicated to nurturing students of knowledge through a balanced, authentic, and accessible Islamic curriculum.  
         We provide structured online programs in Qur’an, Fiqh, Arabic, Seerah, and Islamic Sciences — all grounded in the Qur’an and Sunnah.
       </p>
-      <a href="madrasahabout.html" class="bg-[#094570] text-white px-6 py-3 rounded-full hover:bg-[#85CCFF] hover:text-[#094570] transition">Learn More</a>
+      <a href="about.html" class="bg-[#094570] text-white px-6 py-3 rounded-full hover:bg-[#85CCFF] hover:text-[#094570] transition">Learn More</a>
     </div>
   </section>
 
@@ -89,12 +89,12 @@
         <div class="bg-gray-50 rounded-2xl shadow-md p-8 hover:shadow-lg transition">
           <h3 class="text-2xl font-semibold mb-3 text-[#094570]">Madrasah Program</h3>
           <p class="text-gray-600 mb-4">Structured online Arabic & Islamic studies — from foundational to advanced levels. Courses include Qur’an, Fiqh, Arabic, Seerah, and more.</p>
-          <a href="registeration.html" class="text-[#094570] font-medium hover:text-[#85CCFF]">Join Now →</a>
+          <a href="curriculum.html" class="text-[#094570] font-medium hover:text-[#85CCFF]">Join Now →</a>
         </div>
         <div class="bg-gray-50 rounded-2xl shadow-md p-8 hover:shadow-lg transition">
           <h3 class="text-2xl font-semibold mb-3 text-[#094570]">Digital Library</h3>
           <p class="text-gray-600 mb-4">Access lecture notes, e-books, Tajweed audios, and other resources to strengthen your learning experience.</p>
-          <a href="library.html" class="text-[#094570] font-medium hover:text-[#85CCFF]">Explore →</a>
+          <a href="https://t.me/mahadulhimaayah" class="text-[#094570] font-medium hover:text-[#85CCFF]">Explore →</a>
         </div>
       </div>
     </div>
@@ -136,9 +136,10 @@
       <div>
         <h3 class="text-xl font-semibold mb-4">Quick Links</h3>
         <ul class="space-y-2 text-gray-300">
-          <li><a href="madrasahabout.html" class="hover:text-[#85CCFF]">About</a></li>
+          <li><a href="about.html" class="hover:text-[#85CCFF]">About</a></li>
+          <li><a href="faq.html" class="hover:text-[#85CCFF]">FAQ</a></li>
           <li><a href="curriculum.html" class="hover:text-[#85CCFF]">Curriculum</a></li>
-          <li><a href="registeration.html" class="hover:text-[#85CCFF]">Register</a></li>
+          <li><a href="payment-portal.html" class="hover:text-[#85CCFF]">Register</a></li>
           <li><a href="blog.html" class="hover:text-[#85CCFF]">Blog</a></li>
         </ul>
       </div>
