Fix mobile layout + nav links

--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,13 @@
     <div class="container mx-auto flex justify-between items-center py-4 px-6">
       <div class="flex items-center space-x-3">
         <img src="logo.png" alt="Himaayah Logo" class="h-12 w-auto">
-        <span class="text-xl font-bold">Himaayah Madrasah</span>
+        <span class="text-xl font-bold">Himaayah Institute of Arabic and Islamic Studies</span>
       </div>
       <nav class="hidden md:flex space-x-6 font-medium">
-        <a href="home.html" class="hover:text-[#85CCFF]">Home</a>
-        <a href="madrasahabout.html" class="hover:text-[#85CCFF]">About</a>
+        <a href="index.html" class="hover:text-[#85CCFF]">Home</a>
+        <a href="about.html" class="hover:text-[#85CCFF]">About</a>
         <a href="curriculum.html" class="hover:text-[#85CCFF]">Curriculum</a>
-        <a href="registration.html" class="hover:text-[#85CCFF]">Register</a>
+        <a href="payment-portal.html" class="hover:text-[#85CCFF]">Register</a>
         <a href="contact.html" class="text-[#85CCFF] font-semibold">Contact</a>
       </nav>
     </div>
@@ -28,7 +28,7 @@
   <!-- Hero Section -->
   <section class="bg-[#094570] text-white py-20 px-6 text-center">
     <div class="max-w-3xl mx-auto">
-      <h1 class="text-4xl md:text-5xl font-bold mb-4">Contact Himaayah Institute</h1>
+      <h1 class="text-4xl md:text-5xl font-bold mb-4">Have Questions or Suggestions?</h1>
       <p class="text-lg opacity-90">We’d love to hear from you. Reach out for inquiries, registration, or support.</p>
     </div>
   </section>
@@ -46,7 +46,7 @@
         </p>
 
         <div class="space-y-4">
-          <p><strong>📞 Call / SMS:</strong> <a href="tel:+2348136115948" class="text-[#094570] hover:underline">+234 813 611 5948</a></p>
+          <p><strong>📞 Call / SMS:</strong> <a href="tel:+2348136115948" class="text-[#094570] hover:underline">+234 708 015 2258</a></p>
           <p><strong>💬 WhatsApp Channel:</strong> 
             <a href="https://www.whatsapp.com/channel/0029Vb5yFdJ2f3ENd4V1r42n" target="_blank" class="text-[#094570] hover:underline">
               Join our WhatsApp Channel
@@ -59,7 +59,7 @@
           </p>
           <p><strong>📧 Email:</strong> 
             <a href="mailto:himaayahmadrasah@gmail.com" class="text-[#094570] hover:underline">
-              himaayahmadrasah@gmail.com
+              mahadulhimaayah@gmail.com
             </a>
           </p>
         </div>
@@ -100,8 +100,8 @@
 
   <!-- Footer -->
   <footer class="bg-[#094570] text-white py-8 text-center">
-    <p class="text-sm">&copy; 2025 Himaayah Institute of Arabic & Islamic Studies. All rights reserved.</p>
-    <p class="mt-2">Email: himaayahmadrasah@gmail.com | Call: +234 813 611 5948</p>
+    <p class="text-sm">&copy; 2026 Himaayah Institute of Arabic & Islamic Studies. All rights reserved.</p>
+    <p class="mt-2">Email: mahadulhimaayah@gmail.com | Call: +234 813 611 5948</p>
   </footer>
 
 </body>
