--- a/curriculum.html
+++ b/curriculum.html
@@ -33,15 +33,15 @@
   <!-- Navbar -->
   <header class="bg-white border-b sticky top-0 z-40">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex items-center justify-between">
-      <a href="home.html" class="flex items-center gap-3">
+      <a href="index.html" class="flex items-center gap-3">
         <img src="logo.png" alt="Himaayah Logo" class="h-10 w-auto">
         <span class="font-extrabold text-lg text-[var(--regal)]">Himaayah Madrasah</span>
       </a>
       <nav class="hidden md:flex items-center gap-6">
-        <a href="home.html" class="text-sm hover:text-[var(--pastel)]">Home</a>
+        <a href="index.html" class="text-sm hover:text-[var(--pastel)]">Home</a>
         <a href="about.html" class="text-sm hover:text-[var(--pastel)]">About</a>
         <a href="curriculum.html" class="text-sm font-semibold text-[var(--pastel)]">Curriculum</a>
-        <a href="registration.html" class="text-sm hover:text-[var(--pastel)]">Register</a>
+        <a href="payment-portal.html" class="text-sm hover:text-[var(--pastel)]">Register</a>
         <a href="hangout.html" class="text-sm hover:text-[var(--pastel)]">Hangout</a>
       </nav>
     </div>
