--- a/class-select.html
+++ b/class-select.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Select Class - Himaayah Institute</title>
+  <title>Select Class - Himaayah Institute of Arabic and Islamic Studies</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -23,7 +23,8 @@
   <!-- Header -->
   <header class="w-full text-center mb-10">
     <h1 class="text-3xl font-bold text-primary">Select Your Class</h1>
-    <p class="text-gray-600 mt-2 text-sm">Welcome to Himaayah Student Portal. Choose your class to continue.</p>
+    <p class="text-gray-600 mt-2 text-sm">Welcome to HIAIS Student Portal. Choose your class to continue.</p>
+    
   </header>
 
   <!-- Class Selection -->
@@ -63,7 +64,7 @@
 
   <!-- Footer -->
   <footer class="mt-12 text-sm text-gray-600 text-center">
-    © 2025 Himaayah Institute of Arabic & Islamic Studies. All rights reserved.
+    © 2026 Himaayah Institute of Arabic & Islamic Studies. All rights reserved.
   </footer>
 
   <!-- Animation -->
