--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Himaayah Institute of Arabic and Islamic Studies | Registration</title>
   <script src="https://cdn.tailwindcss.com"></script>
+
   <style>
-    html {
-      scroll-behavior: smooth;
-    }
-    /* Floating animation */
+    html { scroll-behavior: smooth; }
+
     @keyframes float {
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-10px); }
     }
-    .float {
-      animation: float 4s ease-in-out infinite;
-    }
-    /* Fade-in effect */
+    .float { animation: float 4s ease-in-out infinite; }
+
     .fade-in {
       opacity: 0;
       transform: translateY(20px);
@@ -30,70 +27,139 @@
   </style>
 </head>
 
-<body class="bg-white text-[#094570]">
+<body class="bg-white text-[#094570] overflow-x-hidden">
 
   <!-- Navbar -->
-  <header class="bg-[#094570] text-white shadow-md fixed w-full z-50">
-    <div class="container mx-auto flex justify-between items-center py-4 px-6">
-      <!-- Logo -->
-      <div class="flex items-center space-x-3">
-        <img src="logo.png" alt="Himaayah Logo" class="h-12 w-auto">
-        <span class="text-xl font-bold tracking-wide">Himaayah Institute of Arabic and Islamic Studies</span>
+  <header class="bg-[#094570] text-white shadow-md fixed inset-x-0 top-0 z-50">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6">
+      <div class="flex h-16 items-center justify-between">
+        <!-- Brand -->
+        <a href="index.html" class="flex items-center gap-3 min-w-0">
+          <img src="logo.png" alt="Himaayah Logo" class="h-10 w-10 shrink-0 object-contain" />
+          <div class="min-w-0">
+            <!-- Mobile short name -->
+            <div class="font-bold leading-tight truncate sm:hidden">
+              Himaayah Institute
+            </div>
+            <!-- Desktop full name -->
+            <div class="hidden sm:block font-bold leading-tight">
+              Himaayah Institute of Arabic and Islamic Studies
+            </div>
+            <div class="hidden sm:block text-xs text-white/70">
+              Arabic. Qur’an. Islamic Sciences.
+            </div>
+          </div>
+        </a>
+
+        <!-- Desktop links -->
+       <nav class="hidden md:flex space-x-6 font-medium">
+  <a href="./" class="hover:text-[#85CCFF]">Home</a>
+  <a href="about.html" class="hover:text-[#85CCFF]">About</a>
+  <a href="curriculum.html" class="hover:text-[#85CCFF]">Curriculum</a>
+  <a href="login.html" class="hover:text-[#85CCFF]">Login</a>
+  <a href="payment-portal.html" class="hover:text-[#85CCFF]">Register</a>
+  <a href="blog.html" class="hover:text-[#85CCFF]">Blog</a>
+  <a href="contact.html" class="hover:text-[#85CCFF]">Contact</a>
+</nav>
+
+
+        <!-- Mobile menu button -->
+        <button
+          id="menuBtn"
+          class="md:hidden inline-flex items-center justify-center rounded-xl border border-white/20 px-3 py-2 text-sm hover:bg-white/10"
+          aria-expanded="false"
+          aria-controls="mobileMenu"
+        >
+          Menu
+        </button>
       </div>
-      <!-- Links -->
-      <nav class="hidden md:flex space-x-6 font-medium">
-        <a href="index.html" class="hover:text-[#85CCFF]">Home</a>
-        <a href="about.html" class="hover:text-[#85CCFF]">About</a>
-        <a href="curriculum.html" class="hover:text-[#85CCFF]">Curriculum</a>
-        <a href="login.html" class="hover:text-[#85CCFF]">Login</a>
-        <a href="payment-portal.html" class="hover:text-[#85CCFF]">Register</a>
-        <a href="blog.html" class="hover:text-[#85CCFF]">Blog</a>
-        <a href="contact.html" class="hover:text-[#85CCFF]">Contact</a>
-      </nav>
+
+      <!-- Mobile menu -->
+      <div id="mobileMenu" class="md:hidden hidden pb-4">
+        <nav class="grid gap-2 rounded-2xl border border-white/10 bg-white/5 p-3">
+          <a href="index.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Home</a>
+          <a href="about.html" class="rounded-xl px-3 py-2 hover:bg-white/10">About</a>
+          <a href="curriculum.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Curriculum</a>
+          <a href="login.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Login</a>
+          <a href="payment-portal.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Register</a>
+          <a href="blog.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Blog</a>
+          <a href="contact.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Contact</a>
+        </nav>
+      </div>
     </div>
   </header>
 
   <!-- Hero Section -->
-  <section class="bg-[#094570] text-white pt-32 pb-20 text-center relative overflow-hidden">
+  <section class="relative overflow-hidden bg-[#094570] text-white pt-24 sm:pt-28">
+    <!-- subtle gradient so blue feels calmer -->
+    <div class="absolute inset-0 bg-gradient-to-b from-white/0 via-white/0 to-black/10"></div>
+
     <!-- Floating shapes -->
-    <div class="absolute top-10 left-10 w-12 h-12 bg-[#85CCFF] rounded-full opacity-20 float"></div>
-    <div class="absolute bottom-10 right-10 w-16 h-16 bg-white rounded-full opacity-10 float"></div>
-    <div class="max-w-4xl mx-auto px-6 fade-in">
-      <h1 class="text-4xl md:text-5xl font-bold leading-tight mb-4">Welcome to 
-        <span class="text-[#85CCFF]">Himaayah Institute of Arabic and Islamic Studies</span></h1>
-      <p class="text-lg text-gray-200 mb-8">A place where knowledge refines the soul, Arabic becomes your language of light, and faith guides your every step.</p>
-      <div class="space-x-4">
-        <a href="payment-portal.html" class="bg-[#85CCFF] text-[#094570] font-semibold px-6 py-3 rounded-full hover:bg-white transition">Join the Madrasah</a>
-        <a href="curriculum.html" class="border border-[#85CCFF] text-[#85CCFF] px-6 py-3 rounded-full hover:bg-[#85CCFF] hover:text-[#094570] transition">View Curriculum</a>
+    <div class="absolute top-10 left-6 sm:left-10 w-10 h-10 bg-[#85CCFF] rounded-full opacity-20 float"></div>
+    <div class="absolute bottom-10 right-6 sm:right-10 w-14 h-14 bg-white rounded-full opacity-10 float"></div>
+
+    <div class="relative mx-auto max-w-5xl px-4 sm:px-6 pb-12 sm:pb-16 fade-in text-center">
+      <h1 class="font-bold leading-tight tracking-tight text-3xl sm:text-4xl md:text-5xl">
+        Welcome to
+        <span class="text-[#85CCFF] block sm:inline break-words">
+          Himaayah Institute of Arabic and Islamic Studies
+        </span>
+      </h1>
+
+      <p class="mx-auto mt-4 max-w-2xl text-base sm:text-lg text-white/80">
+        A place where knowledge refines the soul, Arabic becomes your language of light, and faith guides your every step.
+      </p>
+
+      <!-- Buttons: stacked on mobile, inline on desktop -->
+      <div class="mt-8 flex flex-col sm:flex-row items-stretch sm:items-center justify-center gap-3 sm:gap-4">
+        <a
+          href="payment-portal.html"
+          class="inline-flex justify-center rounded-full bg-[#85CCFF] px-6 py-3 font-semibold text-[#094570] hover:bg-white transition"
+        >
+          Join the Madrasah
+        </a>
+        <a
+          href="curriculum.html"
+          class="inline-flex justify-center rounded-full border border-[#85CCFF] px-6 py-3 font-semibold text-[#85CCFF] hover:bg-[#85CCFF] hover:text-[#094570] transition"
+        >
+          View Curriculum
+        </a>
       </div>
     </div>
   </section>
 
   <!-- About Preview -->
-  <section class="py-16 bg-gray-50 fade-in">
-    <div class="container mx-auto px-6 text-center max-w-4xl">
-      <h2 class="text-3xl font-bold mb-4 text-[#094570]">About Himaayah</h2>
+  <section class="py-14 sm:py-16 bg-gray-50 fade-in">
+    <div class="mx-auto max-w-4xl px-4 sm:px-6 text-center">
+      <h2 class="text-2xl sm:text-3xl font-bold mb-4 text-[#094570]">About Himaayah</h2>
       <p class="text-gray-700 leading-relaxed mb-8">
-        Himaayah Institute of Arabic & Islamic Studies is dedicated to nurturing students of knowledge through a balanced, authentic, and accessible Islamic curriculum.  
-        We provide structured online programs in Qur’an, Fiqh, Arabic, Seerah, and Islamic Sciences — all grounded in the Qur’an and Sunnah.
+        Himaayah Institute of Arabic & Islamic Studies is dedicated to nurturing students of knowledge through a balanced,
+        authentic, and accessible Islamic curriculum.
+        We provide structured online programs in Qur’an, Fiqh, Arabic, Seerah, and Islamic Sciences, all grounded in the Qur’an and Sunnah.
       </p>
-      <a href="about.html" class="bg-[#094570] text-white px-6 py-3 rounded-full hover:bg-[#85CCFF] hover:text-[#094570] transition">Learn More</a>
+      <a href="about.html" class="inline-flex justify-center bg-[#094570] text-white px-6 py-3 rounded-full hover:bg-[#85CCFF] hover:text-[#094570] transition">
+        Learn More
+      </a>
     </div>
   </section>
 
   <!-- Programs Section -->
-  <section class="py-20 bg-white fade-in">
-    <div class="container mx-auto px-6 text-center">
-      <h2 class="text-3xl font-bold text-[#094570] mb-12">Our Core Programs</h2>
-      <div class="grid md:grid-cols-2 gap-8">
-        <div class="bg-gray-50 rounded-2xl shadow-md p-8 hover:shadow-lg transition">
-          <h3 class="text-2xl font-semibold mb-3 text-[#094570]">Madrasah Program</h3>
-          <p class="text-gray-600 mb-4">Structured online Arabic & Islamic studies — from foundational to advanced levels. Courses include Qur’an, Fiqh, Arabic, Seerah, and more.</p>
+  <section class="py-16 sm:py-20 bg-white fade-in">
+    <div class="mx-auto max-w-6xl px-4 sm:px-6 text-center">
+      <h2 class="text-2xl sm:text-3xl font-bold text-[#094570] mb-10 sm:mb-12">Our Core Programs</h2>
+      <div class="grid gap-6 sm:gap-8 md:grid-cols-2">
+        <div class="bg-gray-50 rounded-2xl shadow-md p-7 sm:p-8 hover:shadow-lg transition text-left">
+          <h3 class="text-xl sm:text-2xl font-semibold mb-3 text-[#094570]">Madrasah Program</h3>
+          <p class="text-gray-600 mb-4">
+            Structured online Arabic & Islamic studies from foundational to advanced levels. Courses include Qur’an, Fiqh, Arabic, Seerah, and more.
+          </p>
           <a href="curriculum.html" class="text-[#094570] font-medium hover:text-[#85CCFF]">Join Now →</a>
         </div>
-        <div class="bg-gray-50 rounded-2xl shadow-md p-8 hover:shadow-lg transition">
-          <h3 class="text-2xl font-semibold mb-3 text-[#094570]">Digital Library</h3>
-          <p class="text-gray-600 mb-4">Access lecture notes, e-books, Tajweed audios, and other resources to strengthen your learning experience.</p>
+        <div class="bg-gray-50 rounded-2xl shadow-md p-7 sm:p-8 hover:shadow-lg transition text-left">
+          <h3 class="text-xl sm:text-2xl font-semibold mb-3 text-[#094570]">Digital Library</h3>
+          <p class="text-gray-600 mb-4">
+            Access lecture notes, e-books, Tajweed audios, and other resources to strengthen your learning experience.
+          </p>
           <a href="https://t.me/mahadulhimaayah" class="text-[#094570] font-medium hover:text-[#85CCFF]">Explore →</a>
         </div>
       </div>
@@ -101,41 +167,51 @@
   </section>
 
   <!-- Blog Section -->
-  <section class="bg-[#F9FAFB] py-16 fade-in">
-    <div class="container mx-auto px-6 text-center">
-      <h2 class="text-3xl font-bold mb-8 text-[#094570]">From Our Blog</h2>
-      <p class="text-gray-600 mb-10">Read insightful reflections and articles from our teachers and students — exploring Qur’an, language, and life lessons.</p>
-      <a href="blog.html" class="bg-[#094570] text-white px-8 py-3 rounded-full hover:bg-[#85CCFF] hover:text-[#094570] transition">Visit Blog</a>
+  <section class="bg-[#F9FAFB] py-14 sm:py-16 fade-in">
+    <div class="mx-auto max-w-4xl px-4 sm:px-6 text-center">
+      <h2 class="text-2xl sm:text-3xl font-bold mb-6 sm:mb-8 text-[#094570]">From Our Blog</h2>
+      <p class="text-gray-600 mb-8 sm:mb-10">
+        Read insightful reflections and articles from our teachers and students exploring Qur’an, language, and life lessons.
+      </p>
+      <a href="blog.html" class="inline-flex justify-center bg-[#094570] text-white px-8 py-3 rounded-full hover:bg-[#85CCFF] hover:text-[#094570] transition">
+        Visit Blog
+      </a>
     </div>
   </section>
 
   <!-- Testimonials -->
-  <section class="py-16 bg-white fade-in">
-    <div class="container mx-auto px-6 text-center">
-      <h2 class="text-3xl font-bold mb-8 text-[#094570]">What Our Students Say</h2>
-      <div class="grid md:grid-cols-2 gap-8">
-        <div class="bg-gray-50 rounded-xl shadow-md p-8">
-          <p class="italic text-gray-600 mb-4">"Studying at Himaayah transformed my connection with Arabic and my understanding of Deen. The classes are deep and spiritual."</p>
-          <h4 class="font-semibold text-[#094570]">— Fatimah, Lagos</h4>
+  <section class="py-14 sm:py-16 bg-white fade-in">
+    <div class="mx-auto max-w-6xl px-4 sm:px-6 text-center">
+      <h2 class="text-2xl sm:text-3xl font-bold mb-8 text-[#094570]">What Our Students Say</h2>
+      <div class="grid gap-6 sm:gap-8 md:grid-cols-2 text-left">
+        <div class="bg-gray-50 rounded-2xl shadow-md p-7 sm:p-8">
+          <p class="italic text-gray-600 mb-4">
+            "Studying at Himaayah transformed my connection with Arabic and my understanding of Deen. The classes are deep and spiritual."
+          </p>
+          <h4 class="font-semibold text-[#094570]">Fatimah, Lagos</h4>
         </div>
-        <div class="bg-gray-50 rounded-xl shadow-md p-8">
-          <p class="italic text-gray-600 mb-4">"I love how organized and authentic the lessons are. The teachers are humble, knowledgeable, and truly care for students’ growth."</p>
-          <h4 class="font-semibold text-[#094570]">— Ahmad, Abuja</h4>
+        <div class="bg-gray-50 rounded-2xl shadow-md p-7 sm:p-8">
+          <p class="italic text-gray-600 mb-4">
+            "I love how organized and authentic the lessons are. The teachers are humble, knowledgeable, and truly care for students’ growth."
+          </p>
+          <h4 class="font-semibold text-[#094570]">Ahmad, Abuja</h4>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Contact Section -->
+  <!-- Footer -->
   <footer id="contact" class="bg-[#094570] text-white py-12 fade-in">
-    <div class="container mx-auto px-6 grid md:grid-cols-3 gap-8">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 grid gap-8 md:grid-cols-3">
       <div>
-        <h3 class="text-xl font-semibold mb-4">Himaayah Institute of Arabic and Islamic Studies</h3>
-        <p class="text-gray-300">A global digital madrasah dedicated to spreading authentic Islamic knowledge and nurturing balanced scholars of tomorrow.</p>
+        <h3 class="text-lg sm:text-xl font-semibold mb-4">Himaayah Institute of Arabic and Islamic Studies</h3>
+        <p class="text-white/70">
+          A global digital madrasah dedicated to spreading authentic Islamic knowledge and nurturing balanced students of tomorrow.
+        </p>
       </div>
       <div>
-        <h3 class="text-xl font-semibold mb-4">Quick Links</h3>
-        <ul class="space-y-2 text-gray-300">
+        <h3 class="text-lg sm:text-xl font-semibold mb-4">Quick Links</h3>
+        <ul class="space-y-2 text-white/70">
           <li><a href="about.html" class="hover:text-[#85CCFF]">About</a></li>
           <li><a href="faq.html" class="hover:text-[#85CCFF]">FAQ</a></li>
           <li><a href="curriculum.html" class="hover:text-[#85CCFF]">Curriculum</a></li>
@@ -144,25 +220,43 @@
         </ul>
       </div>
       <div>
-        <h3 class="text-xl font-semibold mb-4">Contact</h3>
-        <p class="text-gray-300">Call / SMS: +234 813 611 5948</p>
-        <p class="text-gray-300">WhatsApp Channel: <a href="https://www.whatsapp.com/channel/0029Vb5yFdJ2f3ENd4V1r42n" class="text-[#85CCFF] hover:underline">Join here</a></p>
-        <p class="text-gray-300">Telegram: <a href="https://t.me/mahadulhimaayah" class="text-[#85CCFF] hover:underline">Join here</a></p>
+        <h3 class="text-lg sm:text-xl font-semibold mb-4">Contact</h3>
+        <p class="text-white/70">Call / SMS: +234 813 611 5948</p>
+        <p class="text-white/70">
+          WhatsApp Channel:
+          <a href="https://www.whatsapp.com/channel/0029Vb5yFdJ2f3ENd4V1r42n" class="text-[#85CCFF] hover:underline">Join here</a>
+        </p>
+        <p class="text-white/70">
+          Telegram:
+          <a href="https://t.me/mahadulhimaayah" class="text-[#85CCFF] hover:underline">Join here</a>
+        </p>
       </div>
     </div>
-    <div class="text-center text-gray-400 mt-10 border-t border-gray-700 pt-6">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 text-center text-white/50 mt-10 border-t border-white/10 pt-6">
       © 2026 Himaayah Institute of Arabic & Islamic Studies. All rights reserved.
     </div>
   </footer>
 
   <script>
+    // Mobile menu toggle
+    const menuBtn = document.getElementById('menuBtn');
+    const mobileMenu = document.getElementById('mobileMenu');
+
+    menuBtn?.addEventListener('click', () => {
+      const isOpen = !mobileMenu.classList.contains('hidden');
+      mobileMenu.classList.toggle('hidden');
+      menuBtn.setAttribute('aria-expanded', String(!isOpen));
+      menuBtn.textContent = isOpen ? 'Menu' : 'Close';
+    });
+
     // Fade-in animation when scrolling
     const fadeEls = document.querySelectorAll('.fade-in');
     const observer = new IntersectionObserver(entries => {
       entries.forEach(entry => {
         if (entry.isIntersecting) entry.target.classList.add('visible');
       });
-    }, { threshold: 0.2 });
+    }, { threshold: 0.15 });
+
     fadeEls.forEach(el => observer.observe(el));
   </script>
 
