--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
 
     <p class="text-center text-sm text-gray-600 mt-6">
       Don’t have an account?
-      <a href="register.html" class="text-primary hover:underline">Register here</a>
+      <a href="payment-portal.html" class="text-primary hover:underline">Register here</a>
     </p>
   </div>
 
