--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
       <div>
         <h2 class="text-2xl font-bold text-[#094570] mb-4">Get in Touch</h2>
         <p class="text-gray-700 mb-6 leading-relaxed">
-          Whether you want to join our programs, explore our Book Club, or simply learn more about Himaayah,
+          Whether you want to join our programs, or simply learn more about Himaayah,
           you can contact us through any of the following channels.
         </p>
 
