Updated the home and about pages

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
       <nav class="hidden md:flex space-x-6 font-medium">
         <a href="index.html" class="hover:text-[#85CCFF]">Home</a>
         <a href="login.html" class="hover:text-[#85CCFF]">Login</a>
-        <a href="madrasahabout.html" class="hover:text-[#85CCFF]">About</a>
+        <a href="about.html" class="hover:text-[#85CCFF]">About</a>
         <a href="blogpost.html" class="hover:text-[#85CCFF]">Blog</a>
         <a href="curriculum.html" class="hover:text-[#85CCFF]">Curriculum</a>
         <a href="contact.html" class="hover:text-[#85CCFF]">Contact</a>
