--- a/blogpost.html
+++ b/blogpost.html
@@ -12,12 +12,12 @@
   <!-- HEADER -->
   <header class="bg-[#094570] text-white py-4 shadow-md fixed top-0 left-0 w-full z-50">
     <div class="max-w-7xl mx-auto px-6 flex justify-between items-center">
-      <a href="home.html" class="text-2xl font-bold">Himaayah Institute</a>
+      <a href="index.html" class="text-2xl font-bold">Himaayah Institute</a>
       <nav class="space-x-6">
-        <a href="home.html" class="hover:text-[#85CCFF]">Home</a>
+        <a href="index.html" class="hover:text-[#85CCFF]">Home</a>
         <a href="about.html" class="hover:text-[#85CCFF]">About</a>
         <a href="curriculum.html" class="hover:text-[#85CCFF]">Curriculum</a>
-        <a href="registration.html" class="hover:text-[#85CCFF]">Register</a>
+        <a href="payment-portal.html" class="hover:text-[#85CCFF]">Register</a>
         <a href="blog.html" class="hover:text-[#85CCFF] underline font-semibold">Blog</a>
         <a href="contact.html" class="hover:text-[#85CCFF]">Contact</a>
       </nav>
@@ -104,7 +104,7 @@
   <footer class="bg-[#094570] text-white py-10">
     <div class="max-w-6xl mx-auto px-6 text-center">
       <p>&copy; 2025 Himaayah Institute of Arabic & Islamic Studies. All rights reserved.</p>
-      <p class="mt-2 text-sm">Contact: himaayahmadrasah@gmail.com | +234 813 611 5948</p>
+      <p class="mt-2 text-sm">Contact: himaayahmadrasah@gmail.com | +234 708 015 2258</p>
     </div>
   </footer>
 
