Blogpost nav updated

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,7 @@
         <a href="about.html" class="hover:text-[#85CCFF]">About</a>
         <a href="curriculum.html" class="hover:text-[#85CCFF]">Curriculum</a>
         <a href="payment-portal.html" class="hover:text-[#85CCFF]">Register</a>
-        <a href="blog.html" class="hover:text-[#85CCFF] underline font-semibold">Blog</a>
+        <a href="blogpost.html" class="hover:text-[#85CCFF] underline font-semibold">Blog</a>
         <a href="contact.html" class="hover:text-[#85CCFF]">Contact</a>
       </nav>
     </div>
