--- a/curriculum.html
+++ b/curriculum.html
@@ -42,7 +42,7 @@
         <a href="about.html" class="text-sm hover:text-[var(--pastel)]">About</a>
         <a href="curriculum.html" class="text-sm font-semibold text-[var(--pastel)]">Curriculum</a>
         <a href="payment-portal.html" class="text-sm hover:text-[var(--pastel)]">Register</a>
-        <a href="hangout.html" class="text-sm hover:text-[var(--pastel)]">Hangout</a>
+        <a href="contact.html" class="text-sm hover:text-[var(--pastel)]">Contact</a>
       </nav>
     </div>
   </header>
