--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <a href="curriculum.html" class="hover:text-[#85CCFF]">Curriculum</a>
   <a href="login.html" class="hover:text-[#85CCFF]">Login</a>
   <a href="payment-portal.html" class="hover:text-[#85CCFF]">Register</a>
-  <a href="blog.html" class="hover:text-[#85CCFF]">Blog</a>
+  <a href="blogpost.html" class="hover:text-[#85CCFF]">Blog</a>
   <a href="contact.html" class="hover:text-[#85CCFF]">Contact</a>
 </nav>
 
@@ -82,7 +82,7 @@
           <a href="curriculum.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Curriculum</a>
           <a href="login.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Login</a>
           <a href="payment-portal.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Register</a>
-          <a href="blog.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Blog</a>
+          <a href="blogpost.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Blog</a>
           <a href="contact.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Contact</a>
         </nav>
       </div>
@@ -173,7 +173,7 @@
       <p class="text-gray-600 mb-8 sm:mb-10">
         Read insightful reflections and articles from our teachers and students exploring Qur’an, language, and life lessons.
       </p>
-      <a href="blog.html" class="inline-flex justify-center bg-[#094570] text-white px-8 py-3 rounded-full hover:bg-[#85CCFF] hover:text-[#094570] transition">
+      <a href="blogpost.html" class="inline-flex justify-center bg-[#094570] text-white px-8 py-3 rounded-full hover:bg-[#85CCFF] hover:text-[#094570] transition">
         Visit Blog
       </a>
     </div>
@@ -216,7 +216,7 @@
           <li><a href="faq.html" class="hover:text-[#85CCFF]">FAQ</a></li>
           <li><a href="curriculum.html" class="hover:text-[#85CCFF]">Curriculum</a></li>
           <li><a href="payment-portal.html" class="hover:text-[#85CCFF]">Register</a></li>
-          <li><a href="blog.html" class="hover:text-[#85CCFF]">Blog</a></li>
+          <li><a href="blogpost.html" class="hover:text-[#85CCFF]">Blog</a></li>
         </ul>
       </div>
       <div>
